--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "homepage": "https://yinfo.github.io/player",
   "scripts": {
-    "build":"npm run prod",
+    "build": "npm run prod",
     "start": "cross-env NODE_ENV=dev webpack-dev-server --config ./webpack.hot.reload.config.js --mode development --host 0.0.0.0",
     "serve-dev": "npm run dev && nodemon ./src/server/server.js",
     "serve-prod": "npm run prod && node ./src/server/server.js",
@@ -176,7 +176,7 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.5.1",
     "expose-loader": "^0.7.5",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fetch-mock": "^7.3.1",
     "file-loader": "^3.0.1",
     "flow-bin": "^0.96.0",
