--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "compression": "^1.7.3",
     "connected-react-router": "^6.3.1",
     "date-fns": "^1.30.1",
+    "express": "^4.17.1",
     "fast-deep-equal": "^2.0.1",
     "font-awesome": "^4.7.0",
     "helmet": "^3.15.1",
